# data_linter_deprecated

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yaml  config.yml
.github/workflows/: pythonpackage.yml
data_linter/: generate_meta_data.py  impose_data_types.py  lint.py  validation_log.py
data_linter/data/: data_type_conversion.csv  metadata_jsonschema.json  type_conversion.json
data_linter/templates/: logentries_detailed.j2  logentry_detailed.j2  logentry_detailed_column_exists_and_order.j2  logentry_detailed_data_type.j2  validationlog_detailed.j2
scripts/: sync_metadata_from_etl_manager.py
tests/: test_basics.py  test_generate_meta_data.py  test_impose_data_types.py  test_linter_class.py  test_log_class.py  testutils.py
tests/data/: fail_data.csv  fail_data.jsonl  meta.json  pass_data.csv  pass_data.jsonl  test_csv_data_dates.csv  test_csv_data_ints.csv  test_csv_data_invalid_enums.csv  test_csv_data_invalid_regex.csv  test_csv_data_valid_enums.csv  test_csv_utf8_strings.csv  test_parquet_data_valid.parquet  test_table_metadata_additional_col.json  test_table_metadata_missing_col.json  test_table_metadata_mixedtype_col.json  test_table_metadata_partition.json  test_table_metadata_valid.json  test_table_metadata_wrong_types.json
tests/expected_results/: test_result_generated_metadata.json  test_result_invalid_enums.json  test_result_invalid_regex.json  test_result_valid_enums.json
tests/meta/: test_invalid_meta_cols_missing_name.json  test_invalid_meta_columns_key_mispelt.json  test_meta_cols_additional_col.json  (+14 more)
(+3 files in other folders)
