[tool.poetry]
name = "data_linter"
version = "0.1.0"
description = "A python package that validates datasets against a metadata schema"
authors = [
    "Karik Isichei <karik.isichei@digital.justice.gov.uk>",
    "Robin Linacre <robin.linacre@digital.justice.gov.uk>",
    "Adam Booker <adam.booker@digital.justice.gov.uk>",
    "Josh Rowe <josh.rowe@digital.justice.gov.uk>",
    "George Kelly <george.kelly@digital.justice.gov.uk>"
]

license = "MIT"

readme = 'README.md'

repository = "https://github.com/moj-analytical-services/data_linter"
homepage = "https://github.com/moj-analytical-services/data_linter"

[tool.poetry.dependencies]
python = "^3.6"
great-expectations = "0.7.*"
pandas = "0.25.*"
parameterized = "0.7.*"
tabulate = "0.8.*"
pyarrow = "0.14.*"
jsonschema = "3.0.*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
